--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -1,7 +1,8 @@
- <div class="app-event-description-panel">
+<div class="app-event-description-panel">
 	<div class="app-event-description-panel__breadcrumb">
 		<app-breadcrumb [event]="event"></app-breadcrumb>
 	</div>
+
 	<div class="app-event-description-panel__container {{event?.color}}">
 		<div class="app-event-description-panel__box-left">
 			<div class="app-event-description-panel__title">{{event.title}}</div>
@@ -21,7 +22,7 @@
 					<span class="app-event-description-panel__date">
 						{{ event.startDate | date:'d MMM yy' }} - {{ event.endDate | date:'d MMM yy' }}
 					</span>
-					<span class="app-event-description-panel__time">
+					<span *ngIf="event.startTime && event.endTime" class="app-event-description-panel__time">
 						{{ event.startTime | date:'h a' }} - {{ event.endTime | date:'h a' }}
 					</span>
 				</ng-container>
@@ -37,110 +38,87 @@
 			<div class="app-event-description-panel__participants-events">
 				<img src="assets/images/icons/icon-user-b.svg" alt="icon-user"
 					class="app-event-description-panel__participants-img">
-				<span class="app-event-description-panel__participants-numbers"> 23 </span>
+				<span class="app-event-description-panel__participants-numbers"> 23</span>
 			</div>
-
 		</div>
 	</div>
+
 	<div class="app-event-description-panel__content-wrapper">
 		<div class="app-event-description-panel__content">
-			Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6 or
-			7 problems (or 8) with expected difficulties to compose an interesting competition for participants with
-			ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can register
-			for the round unofficially.
-
-			The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-			solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open hacks.
-			I tried to make strong tests — just like you will be upset if many solutions fail after the contest is over.
-			You will be given 6 or 7 (or 8) problems and 2 hours to solve them.
-			Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-			minutes.
-
-			Remember that only the trusted participants of the third division will be included in the official standings
-			table. As it is written by link, this is a compulsory measure for combating unsporting behavior. To qualify
-			as a trusted participants of the third division, you must:
-			take part in at least two rated rounds (and solve at least one problem in each of them),
-			do not have a point of 1900 or higher in the rating.
-			Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6 or
-			7 problems (or 8) with expected difficulties to compose an interesting competition for participants with
-			ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can register
-			for the round unofficially.
-
-			The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-			solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open hacks.
-			I tried to make strong tests — just like you will be upset if many solutions fail after the contest is over.
-			You will be given 6 or 7 (or 8) problems and 2 hours to solve them.
-			Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-			minutes.
-
-			Remember that only the trusted participants of the third division will be included in the official standings
-			table. As it is written by link, this is a compulsory measure for combating unsporting behavior. To qualify
-			as a trusted participants of the third division, you must:
-			take part in at least two rated rounds (and solve at least one problem in each of them),
-			do not have a point of 1900 or higher in the rating.
-			Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6 or
-			7 problems (or 8) with expected difficulties to compose an interesting competition for participants with
-			ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can register
-			for the round unofficially.
-
-			The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-			solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open hacks.
-			I tried to make strong tests — just like you will be upset if many solutions fail after the contest is over.
-			You will be given 6 or 7 (or 8) problems and 2 hours to solve them.
-			Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-			minutes.
-
-			Remember that only the trusted participants of the third division will be included in the official standings
-			table. As it is written by link, this is a compulsory measure.
-			Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6 or
-			7 problems (or 8) with expected difficulties to compose an interesting competition for participants with
-			ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can register
-			for the round unofficially.
-
-			The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-			solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open hacks.
-			I tried to make strong tests — just like you will be upset if many solutions fail after the contest is over.
-			You will be given 6 or 7 (or 8) problems and 2 hours to solve them.
-			Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-			minutes.
-
-			Remember that only the trusted participants of the third division will be included in the official standings
-			table. As it is written by link, this is a compulsory measure for combating unsporting behavior. To qualify
-			as a trusted participants of the third division, you must:
-			take part in at least two rated rounds (and solve at least one problem in each of them),
-			do not have a point of 1900 or higher in the rating.
-			Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6 or
-			7 problems (or 8) with expected difficulties to compose an interesting competition for participants with
-			ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can register
-			for the round unofficially.
-
-			The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-			solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open hacks.
-			I tried to make strong tests — just like you will be upset if many solutions fail after the contest is over.
-			You will be given 6 or 7 (or 8) problems and 2 hours to solve them.
-			Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-			minutes.
-
-			Remember that only the trusted participants of the third division will be included in the official standings
-			table. As it is written by link, this is a compulsory measure for combating unsporting behavior. To qualify
-			as a trusted participants of the third division, you must:
-			take part in at least two rated rounds (and solve at least one problem in each of them),
-			do not have a point of 1900 or higher in the rating.
-			Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6 or
-			7 problems (or 8) with expected difficulties to compose an interesting competition for participants with
-			ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can register
-			for the round unofficially.
-
-			The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-			solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open hacks.
-			I tried to make strong tests — just like you will be upset if many solutions fail after the contest is over.
-			You will be given 6 or 7 (or 8) problems and 2 hours to solve them.
-			Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-			minutes.
-
-			Remember that only the trusted participants of the third division will be included in the official standings
-			table. As it is written by link, this is a compulsory measure.
+			<p>Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6
+				or 7 problems (or 8) with expected difficulties to compose an interesting competition for participants
+				with ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can
+				register for the round unofficially.</p>
+			<p>The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
+				solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open
+				hacks. I tried to make strong tests &mdash; just like you will be upset if many solutions fail after the
+				contest is over.</p>
+			<p>You will be given 6 or 7 (or 8) problems and 2 hours to solve them.</p>
+			<p>Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
+				minutes.</p>
+			<p>Remember that only the trusted participants of the third division will be included in the official
+				standings table. As it is written by link, this is a compulsory measure for combating unsporting
+				behavior. To qualify as a trusted participants of the third division, you must:</p>
+			<p>take part in at least two rated rounds (and solve at least one problem in each of them),</p>
+			<p>do not have a point of 1900 or higher in the rating.</p>
+			<p>Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6
+				or 7 problems (or 8) with expected difficulties to compose an interesting competition for participants
+				with ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can
+				register for the round unofficially.</p>
+			<p>The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
+				solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open
+				hacks. I tried to make strong tests &mdash; just like you will be upset if many solutions fail after the
+				contest is over.</p>
+			<p>You will be given 6 or 7 (or 8) problems and 2 hours to solve them.</p>
+			<p>Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
+				minutes.</p>
+			<p>Remember that only the trusted participants of the third division will be included in the official
+				standings table. As it is written by link, this is a compulsory measure for combating unsporting
+				behavior. To qualify as a trusted participants of the third division, you must:</p>
+			<p>take part in at least two rated rounds (and solve at least one problem in each of them),</p>
+			<p>do not have a point of 1900 or higher in the rating.</p>
+			<p>Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6
+				or 7 problems (or 8) with expected difficulties to compose an interesting competition for participants
+				with ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can
+				register for the round unofficially.</p>
+			<p>The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
+				solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open
+				hacks. I tried to make strong tests &mdash; just like you will be upset if many solutions fail after the
+				contest is over.</p>
+			<p>You will be given 6 or 7 (or 8) problems and 2 hours to solve them.</p>
+			<p>Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
+				minutes.</p>
+			<p>Remember that only the trusted participants of the third division will be included in the official
+				standings table. As it is written by link, this is a compulsory measure.</p>
+		</div>
+		<div class="app-event-description-panel__bottom-panel">
+			<div class="app-event-description-panel__box-right">
+				<div class="app-event-description-panel__time-events">
+					<img src="assets/images/icons/icon-calendar-b.svg" alt="icon-calendar"
+						class="app-event-description-panel__calendar">
+					<ng-container *ngIf="event.endDate else withoutEndDateTemplate">
+						<span class="app-event-description-panel__date">
+							{{ event.startDate | date:'d MMM yy' }} - {{ event.endDate | date:'d MMM yy' }}
+						</span>
+						<span *ngIf="event.startTime && event.endTime" class="app-event-description-panel__time">
+							{{ event.startTime | date:'h a' }} - {{ event.endTime | date:'h a' }}
+						</span>
+					</ng-container>
+					<ng-template #withoutEndDateTemplate>
+						<span class="app-event-description-panel__date">
+							{{ event.startDate | date:'d MMM yy' }}
+						</span>
+						<span class="app-event-description-panel__time">
+							<span>In Progress</span>
+						</span>
+					</ng-template>
+				</div>
+				<div class="app-event-description-panel__participants-events">
+					<img src="assets/images/icons/icon-user-b.svg" alt="icon-user"
+						class="app-event-description-panel__participants-img">
+					<span class="app-event-description-panel__participants-numbers"> 23</span>
+				</div>
+			</div>
 		</div>
 	</div>
-</div> 
-
+</div>
