--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.scss
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.scss
@@ -3,129 +3,131 @@
 $appear-bottom-panel: 200px;
 
 .app-event-description-panel {
-	background-color: #f8f8f8;
+  background-color: #f8f8f8;
 
-	&__breadcrumb {
-		position: sticky;
-		top: 80px;
-		z-index: 2;
-	}
+  &__breadcrumb {
+    position: sticky;
+    top: 80px;
+    z-index: 2;
+  }
 
-	&__container {
-		display: flex;
-		align-items: start;
-		justify-content: center;
-		padding: 0 $main-grid-unit * 22 0 $main-grid-unit * 22;
-	}
+  &__container {
+    display: flex;
+    align-items: start;
+    justify-content: center;
+    padding: 0 $main-grid-unit * 22 0 $main-grid-unit * 22;
+  }
 
-	&__box-left {
-		width: 600px;
-		margin: 40px 0;
-	}
+  &__box-left {
+    width: 600px;
+    margin: 40px 0;
+  }
 
-	&__box-right {
-		width: 290px;
-		margin: 40px 0;
-	}
+  &__box-right {
+    width: 290px;
+    margin: 40px 0;
+  }
 
-	&__title {
-		@include text-h1();
-		color: $color-white-100;
-		margin-bottom: 16px;
-	}
+  &__title {
+    @include text-h1();
+    color: $color-white-100;
+    margin-bottom: 16px;
+  }
 
-	&__description {
-		@include text-p();
-		color: $color-white-100;
-		margin-bottom: 24px;
-	}
+  &__description {
+    @include text-p();
+    color: $color-white-100;
+    margin-bottom: 24px;
+  }
 
-	&__take-part-button {
-		@include text-h4();
-	}
+  &__take-part-button {
+    @include text-h4();
+  }
 
-	&__time-events {
-		margin-bottom: 24px;
-	}
+  &__take-part-button {
+    ::ng-deep {
+      button {
+        background-color: $color-coral !important;
+        padding: 12px 16px !important;
+      }
+    }
+  }
 
-	&__calendar,
-	&__participants-img {
-		vertical-align: middle;
-	}
+  &__time-events {
+    margin-bottom: 24px;
+  }
 
-	&__time,
-	&__date,
-	&__participants-numbers {
-		@include text-h4-bold();
-		color: $color-white-100;
-		vertical-align: middle;
-	}
+  &__calendar,
+  &__participants-img {
+    vertical-align: middle;
+  }
 
-	&__time-bottom,
-	&__date-bottom,
-	&__participants-numbers-bottom {
-		color: $color-black-100;
-		vertical-align: middle;
-	}
+  &__time,
+  &__date,
+  &__participants-numbers {
+    @include text-h4-bold();
+    color: $color-white-100;
+    vertical-align: middle;
+  }
 
-	&__bottom-panel {
-		padding: 0 $layout-outer-margin;
-		background-color: $color-white-100;
-		position: sticky;
-		bottom: 0;
-		height: $main-grid-unit * 10;
-		width: 100vw;
-		@include text-p();
-		line-height: $main-grid-unit * 10;
-		vertical-align: middle;
-		box-sizing: border-box;
-	}
+  &__time-bottom,
+  &__date-bottom,
+  &__participants-numbers-bottom {
+    color: $color-black-100;
+    vertical-align: middle;
+  }
 
-	&__box-bottom {
-		display: flex;
-		justify-content: space-between;
-	}
+  &__bottom-panel {
+    padding: 0 $layout-outer-margin;
+    background-color: $color-white-100;
+    position: sticky;
+    bottom: 0;
+    height: $main-grid-unit * 10;
+    width: 100vw;
+    @include text-p();
+    line-height: $main-grid-unit * 10;
+    vertical-align: middle;
+    box-sizing: border-box;
+  }
 
-	&__event-info-bottom {
-		display: flex;
-	}
+  &__box-bottom {
+    display: flex;
+    justify-content: space-between;
+  }
 
-	&__participants-events-bottom {
-		margin-left: $main-grid-unit * 5;
-	}
+  &__event-info-bottom {
+    display: flex;
+  }
 
-	&__content-wrapper {
-		display: inline-block;
-		margin-top: calc(100vh - #{$appear-bottom-panel});
-	}
+  &__participants-events-bottom {
+    margin-left: $main-grid-unit * 5;
+  }
 
-	&__content {
-		@include text-p();
-		color: $color-black-100;
-		margin: calc(-100vh + #{$appear-bottom-panel} + #{$main-grid-unit * 5}) $main-grid-unit * 22 $main-grid-unit * 5
-			$main-grid-unit * 22;
-	}
-}
+  &__content-wrapper {
+    display: inline-block;
+    margin-top: calc(100vh - #{$appear-bottom-panel});
+  }
 
-::ng-deep {
-	.button--flat {
-		background-color: $color-coral !important;
-		padding: 12px 16px !important;
-	}
+  &__content {
+    @include text-p();
+    color: $color-black-100;
+    margin: calc(-100vh + #{$appear-bottom-panel} + #{$main-grid-unit * 5})
+      $main-grid-unit * 22 $main-grid-unit * 5 $main-grid-unit * 22;
+  }
 }
 
 .primary {
-	background: $gradient-primary;
+  background: $gradient-primary;
 }
 
 .secondary {
-	background: $gradient-secondary;
+  background: $gradient-secondary;
 }
 
 .tertiary {
-	background: $gradient-tertiary;
+  background: $gradient-tertiary;
 }
 
 .important-role {
-	background: $gradient-important-role;
+  background: $gradient-important-role;
 }
