feat: delete ng-deep, added new line,encapsulation

--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -45,51 +45,7 @@
 
 	<div class="app-event-description-panel__content-wrapper">
 		<div class="app-event-description-panel__content">
-			<p>Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6
-				or 7 problems (or 8) with expected difficulties to compose an interesting competition for participants
-				with ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can
-				register for the round unofficially.</p>
-			<p>The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-				solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open
-				hacks. I tried to make strong tests &mdash; just like you will be upset if many solutions fail after the
-				contest is over.</p>
-			<p>You will be given 6 or 7 (or 8) problems and 2 hours to solve them.</p>
-			<p>Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-				minutes.</p>
-			<p>Remember that only the trusted participants of the third division will be included in the official
-				standings table. As it is written by link, this is a compulsory measure for combating unsporting
-				behavior. To qualify as a trusted participants of the third division, you must:</p>
-			<p>take part in at least two rated rounds (and solve at least one problem in each of them),</p>
-			<p>do not have a point of 1900 or higher in the rating.</p>
-			<p>Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6
-				or 7 problems (or 8) with expected difficulties to compose an interesting competition for participants
-				with ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can
-				register for the round unofficially.</p>
-			<p>The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-				solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open
-				hacks. I tried to make strong tests &mdash; just like you will be upset if many solutions fail after the
-				contest is over.</p>
-			<p>You will be given 6 or 7 (or 8) problems and 2 hours to solve them.</p>
-			<p>Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-				minutes.</p>
-			<p>Remember that only the trusted participants of the third division will be included in the official
-				standings table. As it is written by link, this is a compulsory measure for combating unsporting
-				behavior. To qualify as a trusted participants of the third division, you must:</p>
-			<p>take part in at least two rated rounds (and solve at least one problem in each of them),</p>
-			<p>do not have a point of 1900 or higher in the rating.</p>
-			<p>Hello! Codeforces Round #656 (Div. 3) will start at Friday, July 17, 2020 at 17:35. You will be offered 6
-				or 7 problems (or 8) with expected difficulties to compose an interesting competition for participants
-				with ratings up to 1600. However, all of you who wish to take part and have rating 1600 or higher, can
-				register for the round unofficially.</p>
-			<p>The round will be hosted by rules of educational rounds (extended ACM-ICPC). Thus, during the round,
-				solutions will be judged on preliminary tests, and after the round it will be a 12-hour phase of open
-				hacks. I tried to make strong tests &mdash; just like you will be upset if many solutions fail after the
-				contest is over.</p>
-			<p>You will be given 6 or 7 (or 8) problems and 2 hours to solve them.</p>
-			<p>Note that the penalty for the wrong submission in this round (and the following Div. 3 rounds) is 10
-				minutes.</p>
-			<p>Remember that only the trusted participants of the third division will be included in the official
-				standings table. As it is written by link, this is a compulsory measure.</p>
+			{{event.description}}
 		</div>
 		<div class="app-event-description-panel__bottom-panel">
 			<div class="app-event-description-panel__box-bottom">
