--- a/frontend/src/app/libs/common-components/components/button/button.component.scss
+++ b/frontend/src/app/libs/common-components/components/button/button.component.scss
@@ -17,7 +17,7 @@
 	justify-content: center;
 
 	min-width: 40px;
-	padding: 8px 16px;
+	padding: 12px 16px;
 
 	font-weight: 500;
 	font-size: 14px;
@@ -66,7 +66,7 @@
 		color: white;
 
 		background-color: #367ff6;
-		border-color: #367ff6;
+		border-color: #367ff6;  
 
 		&[disabled="true"] {
 			color: $color-white-100;
@@ -77,5 +77,20 @@
 
 			background-color: $color-white-30;
 		}
+	}
+
+	&--color-accept {
+		background-color: $color-coral;
+		border-color: $color-coral;
+	}
+
+	&--color-basic {
+		background-color: $color-primary;
+		border-color: $color-primary;
+	}
+
+	&--color-cancel {
+		background-color: $color-black-95;
+		border-color: $color-black-95;
 	}
 }
