--- a/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
+++ b/frontend/src/app/libs/event-description/components/event-description-panel/event-description-panel.component.html
@@ -9,7 +9,7 @@
 			<div class="app-event-description-panel__description" [innerHTML]="event.description"></div>
 			<div class="app-event-description-panel__tool-tip"
 				matTooltip="You must be logged in to participate in this round" [matTooltipDisabled]="userLoginStatus">
-				<app-button type="flat" class="app-event-description-panel__take-part-button"
+				<app-button type="flat" color="accept" class="app-event-description-panel__take-part-button"
 					[disabled]="!userLoginStatus">TAKE PART</app-button>
 			</div>
 		</div>
@@ -38,7 +38,7 @@
 			<div class="app-event-description-panel__participants-events">
 				<img src="assets/images/icons/icon-user-b.svg" alt="icon-user"
 					class="app-event-description-panel__participants-img">
-				<span class="app-event-description-panel__participants-numbers"> 23</span>
+				<span class="app-event-description-panel__participants-numbers">{{event.users.length}}</span>
 			</div>
 		</div>
 	</div>
@@ -75,7 +75,8 @@
 					<div class="app-event-description-panel__participants-events-bottom">
 						<img src="assets/images/icons/icon-user.svg" alt="icon-user"
 							class="app-event-description-panel__participants-img">
-						<span class="app-event-description-panel__participants-numbers-bottom"> 23</span>
+						<span
+							class="app-event-description-panel__participants-numbers-bottom">{{event.users.length}}</span>
 					</div>
 				</div>
 
