--- a/frontend/src/app/libs/event-description/components/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/libs/event-description/components/breadcrumb/breadcrumb.component.html
@@ -1,8 +1,12 @@
 <div class="breadcrumb">
-	<ng-container *ngFor="let breadcrumb of breadcrumbs; let i = index;">
-		<img *ngIf="i === 1" src="assets/images/icons/icon-chevron-right.svg" alt="icons" class="breadcrumb__img">
-		<span [routerLink]="breadcrumb.url" class="breadcrumb__link">
+	<ng-container *ngFor="let breadcrumb of breadcrumbs; let isFirst = first;">
+		<span class="breadcrumb__link"
+			  [routerLink]="breadcrumb.url">
 			{{ breadcrumb.label }}
 		</span>
+		<img class="breadcrumb__img"
+			 *ngIf="isFirst"
+			 src="assets/images/icons/icon-chevron-right.svg"
+			 alt="icons">
 	</ng-container>
 </div>
